--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
