--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.2",
+    "msw": "^1.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.11.16",
@@ -29,5 +31,8 @@
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
+  },
+  "msw": {
+    "workerDirectory": "public"
   }
 }
