--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
 
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
-  "cSpell.words": ["signup"]
+  "cSpell.words": ["datepicker", "signup"]
 }
