--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "msw": "^1.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
+    "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
     "react-redux": "^8.0.5"
@@ -22,6 +23,7 @@
   "devDependencies": {
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
+    "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.9",
     "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
