--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
-    "react-range": "^1.8.14",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "react-tabs": "^6.0.0",
+    "react-range": "^1.8.14"
   },
   "devDependencies": {
     "@types/node": "18.11.16",
