DAYD-768 fix node_moduleフォルダに関して、コンテナ内でインストールしたものを使うように修正

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,11 @@ services:
     environment:
       - WATCHPACK_POLLING=true
     volumes:
-      - ./:/daydule/
+      - ./:/daydule:cached
+      - node_modules:/daydule/node_modules
     ports:
       - '3001:3001'
     command: 'npm run dev'
+
+volumes:
+  node_modules:
