DAYD-764 add モーダルを追加

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,5 @@
 
   "editor.tabSize": 2,
   "editor.insertSpaces": true,
-  "cSpell.words": ["datepicker", "signup"]
+  "cSpell.words": ["datepicker", "headlessui", "heroicons", "signup"]
 }
