DAYD-764 [メイン画面]予定todo詳細モーダル (#14)
* DAYD-727 add & update メイン画面に細かい機能を追加、元の実装を更新

* DAYD-727 refactor todoリスト周りを整理

* DAYD-727 refactor button系のコンポーネントのtypeプロパティを必須に変更

* DAYD-727 refactor todoListComponent.tsx

* DAYD-727 fix key指定の間違いを修正

* DAYD-727 add & refactor 予定の削除ボタンをコンポーネントとして切り出し

* DAYD-727 refactor スケジュールの開始終了時間を定数化

* DAYD-727 refactor 定数を定数化

* DAYD-727 delete src/components/atoms/ButtonWithIconComponent.tsxの不要なコードを削除

* DAYD-727 fix src/components/molecules/DeletePlanButtonComponent.tsxのフォームタグが固有になるように修正

* DAYD-727 refactor 定数を定数化

* DAYD-727 add コメントを追加

* DAYD-727 refactor src/components/organisms/ScheduleComponent.tsxとsrc/components/molecules/PlanCardComponent.tsxの変数名を変更

* DAYD-727 refactor 定数を整理

* DAYD-727 refactor フォルダ構成とファイル名を一部変更

* DAYD-727 fix インポート文のミスを修正

* DAYD-764 refactor 実装が完結になるように修正

* DAYD-764 update 本番サーバー起動時に3001ポートを利用するように変更

* DAYD-764 fix todoリストの順番替えAPIをトライキャッチ

* DAYD-764 refactor onClick -> handleClick

* DAYD-764 add モーダルを追加

* DAYD-764 fix RegisterPlanComponentの登録処理のデフォルト値のパラメータが逆になっている部分を修正

* DAYD-764 update CheckBoxComponentのレイアウト調整

* DAYD-764 add todo登録モーダルを追加

* DAYD-764 update 予定登録モーダルの移動時間と予備時間をコメントアウト

* DAYD-764 fix モーダルのスライダーの最小値を15に変更

--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "scripts": {
     "dev": "next dev -p 3001",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 3001",
     "lint": "next lint --dir src",
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.2",
     "msw": "^1.0.0",
     "next": "13.0.7",
@@ -19,9 +21,9 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-range": "^1.8.14",
     "react-redux": "^8.0.5",
-    "react-tabs": "^6.0.0",
-    "react-range": "^1.8.14"
+    "react-tabs": "^6.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.16",
