--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.2",
+    "@szhsin/react-menu": "^3.5.3",
     "msw": "^1.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
