--- a/package.json
+++ b/package.json
@@ -22,9 +22,13 @@
     "react-datepicker": "^4.10.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1",
+    "react-markdown": "^8.0.7",
     "react-range": "^1.8.14",
     "react-redux": "^8.0.5",
-    "react-tabs": "^6.0.0"
+    "react-syntax-highlighter": "^15.5.0",
+    "react-tabs": "^6.0.0",
+    "rehype-raw": "^6.1.1",
+    "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
     "@types/node": "18.11.16",
@@ -32,6 +36,7 @@
     "@types/react-beautiful-dnd": "^13.1.4",
     "@types/react-datepicker": "^4.10.0",
     "@types/react-dom": "18.0.9",
+    "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.13",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
