--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "remark-gfm": "^3.0.1"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.9",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-beautiful-dnd": "^13.1.4",
