--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.2",
     "@szhsin/react-menu": "^3.5.3",
+    "@types/react-redux-toastr": "^7.6.2",
     "msw": "^1.0.0",
     "next": "13.0.7",
     "react": "18.2.0",
@@ -24,6 +25,7 @@
     "react-icons": "^4.7.1",
     "react-range": "^1.8.14",
     "react-redux": "^8.0.5",
+    "react-redux-toastr": "^7.6.11",
     "react-tabs": "^6.0.0"
   },
   "devDependencies": {
