--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "react-syntax-highlighter": "^15.5.0",
     "react-tabs": "^6.0.0",
     "rehype-raw": "^6.1.1",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
