--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
     "tailwindcss": "^3.2.4",
