--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "eslint-plugin-tailwindcss": "^3.13.0",
     "postcss": "^8.4.20",
     "prettier": "^2.8.1",
+    "tailwind-merge": "^1.14.0",
     "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
