--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint:fix": "yarn lint --fix",
     "format": "prettier --write --ignore-path .gitignore './**/*.{js,jsx,ts,tsx,json}'",
     "storybook": "storybook dev -p 6006",
-    "build-storybook": "storybook build"
+    "build-storybook": "storybook build",
+    "chromatic": "npx chromatic --project-token=$CHROMATIC_PROJECT_TOKEN"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
@@ -52,6 +53,7 @@
     "@types/react-dom": "18.0.9",
     "@types/react-syntax-highlighter": "^15.5.7",
     "autoprefixer": "^10.4.13",
+    "chromatic": "^7.4.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "eslint-config-prettier": "^8.5.0",
