--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@szhsin/react-menu": "^3.5.3",
     "@types/react-redux-toastr": "^7.6.2",
     "msw": "^1.0.0",
-    "next": "13.0.7",
+    "next": "^13.5.5",
     "react": "18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-datepicker": "^4.10.0",
