--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/react": "^7.4.6",
     "@storybook/testing-library": "^0.2.2",
     "@tailwindcss/typography": "^0.5.9",
+    "@types/gtag.js": "^0.0.17",
     "@types/node": "18.11.16",
     "@types/react": "18.0.26",
     "@types/react-beautiful-dnd": "^13.1.4",
